fix responsiveness on mobile

--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -33,3 +33,16 @@ body{
 
     padding: 5px;
 }
+
+#tabs-with-content .tabs:not(:last-child) {
+    margin-bottom: 0;
+}
+
+#tabs-with-content .tab-content {
+    padding: 1rem;
+    display: none;
+}
+
+#tabs-with-content .tab-content.is-active {
+    display: block;
+}
